kanc/src/tests/sample_code/should_fail/single_file/type_check/call_arg_labeledness_mismatch/labeled_type_unlabeled_args.k
type Nat {
    .o: Nat,
    .s(n: Nat): Nat,
}

type List(Item~_: Type) {
    .nil(~Item: Type): List(:Item),
    .cons(~Item: Type, ~car: Item, ~cdr: List(:Item)): List(:Item),
}

let right = List(Item: Nat);
let wrong = List(Nat);
